--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
     "isHook": true
   },
   "dependencies": {
-    "babel": "^5.0.9"
+    "babel": "^6.3.13",
+    "babel-core": "^6.3.17",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-2": "^6.3.13"
   },
   "devDependencies": {
-    "glob": "^5.0.3",
-    "mocha": "^2.2.1",
-    "sails": "~0.11.0"
+    "glob": "^6.0.1",
+    "mocha": "^2.3.4",
+    "sails": "github:balderdashy/sails"
   },
   "contributors": [
     {
